--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "mysql2": "^2.3.3",
     "node-mysql": "^0.4.2"
   },
